--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --watch"
+    "build:watch": "webpack --watch",
+    "build": "NODE_ENV=production webpack"
   },
   "keywords": [
     "webpack",
